tests/NormalTests/paczka1/fuzzy1/95305303.err
Error in line 6: W0x8EUD3I A328 5 ,0
Error in line 15: JJ1XGw S414 9,4
Error in line 5: 5ALfHD S414 29,8
Error in line 9: djT S160 30,8
Error in line 24: W0x8EUD3I S414 182,8
Error in line 36: W0x8EUD3I S236 10,2
